--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,18 +1,19 @@
-primary_name: "Your Name"
+primary_name: "Zongxia Li"
 secondary_name: ""
-navbar_name: "Your Name"
+navbar_name: "Zongxia Li"
 
 positions:
-- logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
-  name: Position 1 with logo
-- name: Position 2 without logo
+- logo: /assets/images/badges/maryland_logo.png  # Logo is optional
+  name: PhD Candidate At University of Maryland
+# - name: Position 2 without logo
 
 
-email: "your@email.com"
+email: "zli12321@umd.edu"
 # cv_link: link-to-your-cv-file
-gscholar: xFmQpf4AAAAJ  # This is an example, replace it with your own Google Scholar ID
-github: your_github_id
-twitter: your_twitter_id  # Do not include the '@' symbol
+gscholar: https://scholar.google.com/citations?user=X3uWrikAAAAJ&hl=en  # This is an example, replace it with your own Google Scholar ID
+github: zli12321
+linkedin: zongxia-li-96050b236
+twitter: zli12321  # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
@@ -22,29 +23,52 @@ twitter: your_twitter_id  # Do not include the '@' symbol
 short_bio_text_justify: false
 short_bio: >-
   <p>
-    A <a href="https://en.wikipedia.org/wiki/Bicolor_cat" target="_blank">bicolor cat</a> is a cat with white fur combined with fur of some other colour, for example solid black, tabby, or colourpointed.
-  </p>
-  <p>
-    There are various patterns of a bicolour cat. These range from the Van-patterned (colour on the crown of the head 
-    and the tail only) to a solid colour with a throat locket or medallion. Bicolour coats are found in many cat breeds, 
-    as well as being common in domestic longhair and domestic shorthair cats.
+   I am a fourth-year Ph.D. candidate at the Department of Computer Science at University of Maryland, College Park, <a href="https://wiki.umiacs.umd.edu/clip/index.php/Main_Page" target="_blank">CLIP Lab</a>. I am fortunate to be advised by <a href="http://users.umiacs.umd.edu/~ying/" target="_blank">Jordan Boyd-Graber</a>. My current research lies in Human-Centered AI, Multimodal Models, Post-Training and Evaluation.
   </p>
 
-portrait_url: /assets/images/photos/portrait.jpg
-portrait_caption: >-
-  Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
+  <h2 id="areas-of-interest">Current Research Focus</h2>
+  <p>
+    My research aims to develop AI systems and better evaluations that align
+    closely with human needs. In the text-only domain, I aim to develop
+    interactive systems that help humans explore and understand abstract
+    concepts given large amounts of data and improve the robustness of current
+    automatic evaluation metrics. In the multimodal domain, I aim to evaluate and post-train multimodal models—including visual grounding, hallucination mitigation,
+    video generation and reasoning.
+  </p>
+
+  <ol>
+    <li>
+      <p><strong>Multimodality</strong>: Evaluating and improving multimodal
+      models, including question answering, hallucination, video generation,
+      and reasoning.</p>
+    </li>
+    <li>
+      <p><strong>Evaluation</strong>: Improving trustworthiness and robustness
+      of current evaluation metrics.</p>
+    </li>
+    <li>
+      <p><strong>Human-Centered AI</strong>: Creating interactive systems and
+      evaluation frameworks to assess AI reliability.</p>
+    </li>
+  </ol>
+  <hr>
+
+
+portrait_url: /assets/images/photos/me.jpg
+# portrait_caption: >-
+#   Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
 
 education:
-- name: Massachusetts Institute of Technology
-  logo: /assets/images/badges/MIT_Social_circle.png
+- name: University of Maryland, College Park
+  logo: /assets/images/badges/maryland_logo.png
   position: >- 
-    Department of Electrical Engineering and Computer Science <br/>
+    Department of Computer Science <br/>
     Ph.D. Student
-  date: Sep. 2024 - present
-- name: Peking University
-  logo: /assets/images/badges/PKU_red.png
-  position: B.S. in Computer Science
-  date: Sep. 2019 - Jul. 2021
+  date: Sep. 2022 - present
+- name: University of Maryland, College Park
+  logo: /assets/images/badges/maryland_logo.png
+  position: B.S. in Computer Science and Mathematics (Honors)
+  date: Sep. 2018 - May. 2022
 
 # experience:
 # - name: Peking University
@@ -53,9 +77,8 @@ education:
 #   date: Sep. 2019 - Jul. 2021
 
 awards:
-- name: Award Name 2
-  date: 2024
-- name: Award Name 1 
-  date: 2021
-- name: A quick brown fox jumps over the lazy dog and runs away award
-  date: 2021
+- name: <a href="https://lambda.ai/research" target="_blank">Lambda Lab Research Compute Grant</a>
+  date: 2025
+- name: NIST Award Fellowship
+  date: 2023-2025
+
