--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -12,6 +12,7 @@ email: "zli12321@umd.edu"
 # cv_link: link-to-your-cv-file
 gscholar: https://scholar.google.com/citations?user=X3uWrikAAAAJ&hl=en  # This is an example, replace it with your own Google Scholar ID
 github: zli12321
+cv_link: /assets/cv/cv.pdf
 linkedin: zongxia-li-96050b236
 twitter: zli12321  # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
