remove broken link

--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -78,7 +78,7 @@ education:
 #   date: Sep. 2019 - Jul. 2021
 
 awards:
-- name: <a href="https://lambda.ai/research" target="_blank">Lambda Lab Research Compute Grant</a>
+- name: Lambda Lab Research Compute Grant
   date: 2025
 - name: NIST Award Fellowship
   date: 2023-2025
